@@ -37,12 +37,12 @@
             
     <dependency org="log4j" name="log4j" rev="1.2.15" transitive="false"/>
     <dependency org="junit" name="junit" rev="4.7" conf="test->default"/>
-        <dependency org="org.apache.rat" name="apache-rat-tasks" 
+    <dependency org="org.apache.rat" name="apache-rat-tasks"
                 rev="0.6" conf="releaseaudit->default"/>
     <dependency org="commons-lang" name="commons-lang" 
                 rev="2.4" conf="releaseaudit->default"/>
     <dependency org="commons-collections" name="commons-collections" 
-                rev="3.1" conf="releaseaudit->default"/>
+                rev="3.2.2" conf="releaseaudit->default"/>
   </dependencies>
 
 </ivy-module>
