@@ -146,6 +146,9 @@ BUGFIXES:
   ZOOKEEPER-1576. Zookeeper cluster - failed to connect to cluster if one of the
   provided IPs causes java.net.UnknownHostException (Edward Ribeiro via camille)
 
+  ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
+  (phunt via cnauroth)
+
 IMPROVEMENTS:
 
 
